versioned_docs/version-1.4/cloud/preview-environments/gitlab.mdx
---
title: Preview Environments Using GitLab CI/CD
description: Create a preview environment for your application using Okteto and GitLab
sidebar_label: For GitLab
id: preview-environments-gitlab
---

import Image from "@theme/Image";

This section will show you how to automatically create a preview environment for your applications using Okteto and GitLab's review apps.

## Pre-Requisites

- An Okteto account
- A [GitLab Account](https://gitlab.com)

## Step 1: Fork the Sample Repository

For this tutorial, we'll be using [this application](https://gitlab.com/okteto/preview-environments).

## Step 2: Configure your Okteto API Token

To deploy a preview environment with Okteto, you need to define the following environment variables:

1. `OKTETO_TOKEN`: an Okteto [personal access token](cloud/personal-access-tokens.mdx).
1. `OKTETO_USERNAME`: your Okteto username (in Okteto Cloud, this is your GitHub Username).
1. [Optional] `OKTETO_URL`: Specify the URL of your Okteto instance (e.g., https://okteto.dev.mycompany.com). If empty, it will default to https://cloud.okteto.com.

To add the environment variables:

1. Navigate to your GitLab repository.
1. Go to the **Settings** menu on the left, and click on the **CI/CD** entry.

<p align="center">
  <Image
    src={require("@site/static/img/gitlab-settings-cicd.jpg").default}
    alt="GitLab settings, CI/CD"
  />
</p>
1. Expand the **Variables** section, and click on the **Add Variable** button.
<p align="center">
  <Image
    src={
      require("@site/static/img/gitlab-settings-cicd-add-variables.png").default
    }
    alt="GitLab settings, add variables"
  />
</p>

1. Add _OKTETO_TOKEN_ as the key, and your personal access token as the value, and press the _Add Variable_ button.
   <p align="center">
     <Image
       src={
         require("@site/static/img/gitlab-settings-cicd-add-variables-okteto-token.png")
           .default
       }
       alt="update variable with Okteto Token"
     />
   </p>
1. Repeat the same process to add the _OKTETO_USERNAME_ and, optionally, the _OKTETO_URL_ variables.
   <p align="center">
     <Image
       src={
         require("@site/static/img/gitlab-settings-cicd-add-variables-added.png")
           .default
       }
       alt="environment variables added"
     />
   </p>

## Step 3: Configure the Preview Environment on the Repository

To tell GitLab how to deploy our preview environment, you need to create a file named [`.gitlab-ci.yml`](https://docs.gitlab.com/ee/ci/yaml/gitlab_ci_yaml.html) file at the root of the repository.

In this file, we'll define two jobs. The `review` creates a preview environment for every branch and a `stop-review` job to destroy it when merging or deleting the branch.

The flow to create a preview environment looks like this:

1. Create a dedicated namespace for the Preview Environment
1. Build and deploy the application using the [Okteto preview](cloud/preview-environments/overview.mdx) defined in the repository.
1. Add the URL of the Preview Environment to the Merge Request.

The flow to delete a preview environment looks like this:

1. Destroy the application deployed with the [Okteto preview](cloud/preview-environments/overview.mdx)

The `.gitlab-ci.yml` looks like this:

```yaml
# file: .gitlab.ci.yml
image: okteto/okteto:2.4.2

stages:
  - review

review:
  stage: review
  variables:
    APP: review-$CI_COMMIT_REF_SLUG
  script:
    - okteto preview deploy review-$CI_COMMIT_REF_SLUG-$OKTETO_USERNAME --scope personal --branch $CI_COMMIT_REF_NAME --repository $CI_REPOSITORY_URL --wait

  environment:
    name: review/$CI_COMMIT_REF_SLUG
    url: https://movies-review-$CI_COMMIT_REF_SLUG-$OKTETO_USERNAME.cloud.okteto.net
    on_stop: stop-review
  only:
    - branches
  except:
    - master

stop-review:
  stage: review
  when: manual
  environment:
    name: review/$CI_COMMIT_REF_SLUG
    action: stop
  script:
    - okteto preview destroy review-$CI_COMMIT_REF_SLUG-$OKTETO_USERNAME
  variables:
    GIT_STRATEGY: none
  only:
    - branches
  except:
    - master
```

There are two scopes for preview environments, `personal`, where the only one who has access to the environment is the user, and `global`, where all cluster members have access to it and do not need to have the user's name at the end of the preview environment name. To create a preview environment with global scope it is necessary to have administrator permissions.

A few recommendations when creating your preview environment:

- Create a preview environment per branch/merge request to keep things isolated. We use both `$CI_BUILD_REF_NAME` and `$OKTETO_USERNAME` in the name to ensure the namespace is unique and that we only create one per branch.
- Pass the URL of your preview environment using the `environment.url` key. That way, the reviewers can directly go to the preview environment from GitLab.
- Delete both the preview environment, and the namespace when the branch is deleted to cut down on manual deletion.

> Learn more about [the okteto CLI here](reference/cli.mdx).

## Step 4: Create a Merge Request

Once your changes are in your repository, make a small code change and create a new merge request.

After a few seconds, the workflow will update the pull request with the URL of your preview environment. Click on the _View App_ button, access it, and see your changes running.

<p align="center">
  <Image
    src={require("@site/static/img/gitlab-merge-request.png").default}
    alt="GitLab merge request"
  />
</p>

## Step 5: Cleanup

Merging the merge request or deleting the branch automatically triggers the `stop-review` job we defined in the `.gitlab-ci.yml` file. The `stop-review` job will destroy the preview environment automatically for you.

## Configure your GitLab Runner in Okteto

Okteto makes it easy to deploy your own [GitLab Runner](https://docs.gitlab.com/runner/) from the [Okteto Catalog](cloud/deploy-from-helm.mdx). Running your runners is useful if you find yourself constantly waiting for shared runners to be available or want to run more complex configurations.

### Retrieve the Registration Information

1. Navigate to your GitLab repository.
1. Go to the **Settings** menu on the left, and click on the **CI/CD** entry.
   <p align="center">
     <Image
       src={require("@site/static/img/gitlab-settings-cicd.jpg").default}
       alt="settings for GitLab"
     />
   </p>
1. Expand the **Runners** section, and copy the URL and registration tokens.
   <p align="center">
     <Image
       src={
         require("@site/static/img/gitlab-settings-cicd-registration.png")
           .default
       }
       alt="GitLab specific runners"
       width="650"
     />
   </p>

### Deploy your GitLab Runner

1. Log in using your Okteto account.
1. Click on the **Deploy** button on the top.
1. Choose **Catalog** as the source, select **gitlab-runner** from the options below, and click **Deploy**.

<p align="center">
  <Image
    src={require("@site/static/img/gitlab-deploy-runner.png").default}
    width="600"
    alt="GitLab deploy runner"
  />
</p>

1. On the **configuration** section, add your runner registration token to the `runnerRegistrationToken` key.

<p align="center">
  <Image
    src={
      require("@site/static/img/gitlab-deploy-runner-configuration.png").default
    }
    width="500"
    alt="GitLab deploy runner configuration"
  />
</p>

1. [Optional] If you're running your own GitLab instance, also update the value of `gitlabUrl`.
1. Press the **Deploy** button.

In a few seconds, your GitLab Runner will be deployed and registered with your repository. To validate this, go back to the **Runners** section on your repository's settings, and validate that the runner is available there.

<p align="center">
  <Image
    src={
      require("@site/static/img/gitlab-deploy-runner-registered.png").default
    }
    alt="GitLab runner registered"
  />
</p>

> To learn more about GitLab Runners, we recommend you check [their official documentation](https://docs.gitlab.com/runner/).
